add exception handling for email and username conflicts during registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=PrintStainServer
 
-# SSL/HTTPS
-#server.ssl.enabled=true
+#Logging
+logging.level.com.github.zoltar238.PrintStainServer=DEBUG
+#logging.level.root=DEBUG
+logging.file.path=logs/printstain.log
 
 # database settings
 spring.jpa.hibernate.naming.physical-strategy=com.github.zoltar238.PrintStainServer.persistence.config.CustomPhysicalNamingStrategy
